# HypoReflect

./: .gitignore  CLAUDE.md  README.md  check_env.py  check_indexes.py  main.py  probe_ports.py  pyproject.toml  requirements.txt  reset_neo4j.py  run_all_benchmark_parallel.sh  run_all_indexing_parallel.sh  run_benchmark.sh  run_index.sh  run_no_summary_only.sh  run_servers.sh  stop_servers.sh
cli/: benchmark.py  index.py  ocr.py
core/: config.py  neo4j_service.py  schemas.py  vllm_client.py
data/: financebench_failure_sample20.json  financebench_queries.json
docs/: ablation_runbook.md
models/agentic_core/: __init__.py  full_stage_backend.py  orchestrator.py  prompts.py
models/hoprag/: hoprag_adapter.py  official_indexer.py
models/hyporeflect/: agent_service.py  graphrag.py  orchestrator.py  service.py  state.py
models/hyporeflect/graphrag_parts/: __init__.py  indexing_support.py  pipeline_support.py  query_support.py  retrieval_support.py  text_processing.py
models/ms_graphrag/: ms_adapter.py  official_indexer.py
models/naive/: naive_rag.py
scripts/: debug_parsing.py  test_mem.py
tests/: test_agent_audit.py  test_agent_v2.py  test_chunking.py  test_live_integration.py  test_retrieval_constraints.py  test_rolling_summary.py  test_stateful_execution.py
tools/: benchmark_report.py  bootstrap_ci.py
utils/: downloader.py  metrics.py  ocr_tools.py  parsers.py  reporting.py  tag_queries.py  tool_definitions.py  visualize.py
utils/prompts/: __init__.py  document.py  evaluation.py  execution.py  indexing.py  planning.py  shared.py  synthesis.py
(+37 files in other folders)
